--- a/Qubit.html
+++ b/Qubit.html
@@ -461,6 +461,9 @@ var a = new Q.Qubit( 0, 1 )
 		<script>
 
 
+//  First, what do the docs have to say?
+
+console.log( '\n\nQ.Qubit\n\n', Q.Qubit.help(), '\n\n' )
 
 
 
@@ -870,6 +873,7 @@ Object.keys( Q.Qubit.constants ).forEach( function( key ){
 
 
 changeBlochVector()
+
 
 
 
