--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
 				Just copy and paste the following in to your console:
 			</p>
 			<pre><code>
-Q.<a href="Gate.html">Gate</a>.<a href="Gate.html#.HADAMARD">HADAMARD</a>
-	.<a href="Gate.html#.prototype.applyTo">applyTo</a>( Q.<a href="Qubit.html">Qubit</a>.<a href="Qubit.html#.HORIZONTAL">HORIZONTAL</a> )
+<a href="Q.html">Q</a>.<a href="Gate.html">Gate</a>.<a href="Gate.html#.HADAMARD">HADAMARD</a>
+	.<a href="Gate.html#.prototype.applyTo">applyTo</a>( <a href="Q.html">Q</a>.<a href="Qubit.html">Qubit</a>.<a href="Qubit.html#.HORIZONTAL">HORIZONTAL</a> )
 	.<a href="Qubit.html#.prototype.collapse">collapse</a>()
 	.<a href="Qubit.html#this.targetBit">targetBit</a>
 	.<a href="ComplexNumber.html#.prototype.toString">toString</a>()
@@ -291,8 +291,8 @@ Q.<a href="Gate.html">Gate</a>.<a href="Gate.html#.HADAMARD">HADAMARD</a>
 			</p>
 			<pre><code>
 var 
-cat = new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 1,  2 ),
-dog = new Q.<a href="ComplexNumber.html">ComplexNumber</a>( 3, -4 )
+cat = new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 1,  2 ),
+dog = new <a href="Q.html">Q</a>.<a href="ComplexNumber.html">ComplexNumber</a>( 3, -4 )
 
 cat.<a href="ComplexNumber.html#.toString">toString</a>() <span class="comment">//  Returns '1 + 2i'</span>
 dog.<a href="ComplexNumber.html#.toString">toString</a>() <span class="comment">//  Returns '3 - 4i'</span>
